--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         tools:targetApi="31">
         <activity
             android:name=".MainGetList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:parentActivityName=".MainLogin"/>
 
         <activity
             android:name=".MainLogin"
